Font-awesome fixed, images, responsive changes
Font-awesome was not importing correctly, so when the build was pushed
to the server computers that did not have the font were having issues
(such as phones). Fixed with middleman font-awesome gem.

Additionally, images were a little large so that was impacting load
times in production. Image sizes were reduced again slightly.

Finally, a few responsive changes were made for small vertical
viewports to prevent the arrow down button from covering the
social icons.

--- a/source/stylesheets/_banner.sass
+++ b/source/stylesheets/_banner.sass
@@ -18,6 +18,8 @@
     color: white
     text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.8)
     text-align: center
+    @media screen and (max-height: 600px)
+      font-size: 20px
 
 .social li
   display: inline-block
@@ -25,6 +27,8 @@
   padding: 0
   font-size: 40px
   text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.8)
+  @media screen and (max-height: 600px)
+    font-size: 30px
   a
     color: #fff
 
@@ -54,3 +58,7 @@
   left: -50%
   &:hover
     cursor: pointer
+
+.downarrow
+  @media screen and (max-height: 600px)
+    width: 40px
